# smedia_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 20230826_0229_e959e88268ed.py  20230827_1653_fad9243e859b.py  20230827_2214_1fd21dc25b92.py  20230828_0235_36c2b84cd1c8.py
src/: __init__.py  database.py  main.py  settings.py
src/bot/: commands.py  handlers.py  messages.py
src/bot/commands/: users_today.py
src/bot/jobs/: welcome.py
src/bot/messages/: entry.py  idle.py  material.py  welcome.py
src/common/: database.py  settings.py
src/models/: __init__.py  base.py  user.py
